--- a/foodTruck/index.html
+++ b/foodTruck/index.html
@@ -58,7 +58,7 @@
 
     <!-- Header (optional external include placeholder) -->
     <div id="header"></div>
-    <script src="./js/include-header.js"></script>
+    <script src="/js/include-header.js"></script>
    
     <!-- Hero -->
     <section
