--- a/foodTruck/header.html
+++ b/foodTruck/header.html
@@ -5,7 +5,7 @@
       <!-- Brand -->
       <a href="/index.html" class="flex items-center gap-3 group">
         <!-- Use the attached logo image -->
-        <img src="/assets/image.png" alt="Amaravati Foods logo" class="h-9 w-auto drop-shadow" />
+        <img src="af-food-truck/foodTruck/assets/image.png" alt="Amaravati Foods logo" class="h-9 w-auto drop-shadow" />
         <span class="text-base md:text-lg font-semibold tracking-wide text-white group-hover:text-gold-300 transition">
           Amaravati Foods
         </span>
