--- a/foodTruck/header.html
+++ b/foodTruck/header.html
@@ -3,7 +3,7 @@
   <nav class="mx-auto max-w-7xl px-4 md:px-6 lg:px-8">
     <div class="flex h-16 items-center justify-between">
       <!-- Brand -->
-      <a href="/index.html" class="flex items-center gap-3 group">
+      <a href="af-food-truck/foodTruck/index.html" class="flex items-center gap-3 group">
         <!-- Use the attached logo image -->
         <img src="af-food-truck/foodTruck/assets/image.png" alt="Amaravati Foods logo" class="h-9 w-auto drop-shadow" />
         <span class="text-base md:text-lg font-semibold tracking-wide text-white group-hover:text-gold-300 transition">
