--- a/header.html
+++ b/header.html
@@ -20,7 +20,7 @@
       </div>
 
       <!-- CTA -->
-      <a href="/menu.html" id="menuCta"
+      <a href="af-food-truck/menu.html" id="menuCta"
         class="inline-flex items-center gap-2 rounded-full bg-gold-500 text-ink-900 px-4 py-2 font-semibold hover:bg-gold-400 active:bg-gold-600 transition shadow-gold">
         View Menu
       </a>
