--- a/menu.html
+++ b/menu.html
@@ -71,7 +71,7 @@
   <!-- Category Tabs -->
   <section class="bg-ink-800 border-y border-white/5">
     <div class="max-w-6xl mx-auto px-4 md:px-6 lg:px-8 py-4">
-      <div class="flex items-center gap-3 overflow-x-auto no-scrollbar">
+      <div class="flex flex-wrap items-center gap-3">
         <a href="#idly" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2 font-medium hover:border-gold-500/40 hover:text-gold-300 transition">Idly</a>
         <a href="#dosa" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2 font-medium hover:border-gold-500/40 hover:text-gold-300 transition">Dosa</a>
         <a href="#af-specials" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">AF Specials</a>
