--- a/index.html
+++ b/index.html
@@ -151,28 +151,33 @@
       <div
         class="relative max-w-4xl mx-auto text-center text-white px-4"
       >
-        <h2 class="text-3xl md:text-4xl font-extrabold mb-4">Meet the Chef</h2>
+        <h2 class="text-3xl md:text-4xl font-extrabold mb-4">GRAND OPENING SPECIAL</h2>
         <p class="text-white/80">
-          Chef Arjun brings 20+ years of culinary mastery, blending street
-          authenticity with gourmet artistry.
+          Join us for our grand opening! Enjoy a complimentary drink with any
+          meal purchase. Experience the vibrant flavors and warm hospitality of
+          Eat Street Food Truck from Amaravathi Foods.
         </p>
       </div>
     </section>
 
     <!-- ===== SPECIALS ===== -->
-    <section class="bg-gradient-to-r from-gold-500 to-gold-700 py-12">
+    <section class=" py-12 bg-fixed bg-center bg-cover  "  style="background-image: url('https://images.pexels.com/photos/4331489/pexels-photo-4331489.jpeg');">
+   
       <div
         class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between text-ink-900"
       >
-        <h3 class="text-2xl font-bold mb-4 md:mb-0">
-          🌟 This Month's Special: Spicy Paneer Tikka Wrap
+        <h3 class="md:text-2xl font-bold mb-4 md:mb-0 ">
+          🌟 IDLY, DOSA, GULAB JAMON COMBO - <span class="md:text-3xl text-gold-300">$ 10.99</span> <br/>
+          🌟 PUNUGULU, BAJJI, TEA COMBO  - <span class="md:text-3xl text-gold-300">$ 12.99</span>
         </h3>
         <a
           href="#menu"
           class="px-6 py-3 font-semibold bg-ink-900 text-gold-300 rounded-full hover:bg-ink-800"
           >Order Now</a
         >
+
       </div>
+
     </section>
 
     <!-- Popular Items / Menu -->
@@ -344,9 +349,35 @@
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div class="relative order-2 md:order-1">
             <h3 class="text-2xl md:text-3xl font-extrabold">Find Us Here</h3>
-            <p class="mt-3 text-white/80">📍 123 Food Street, San Francisco, CA</p>
-            <p class="mt-2 text-white/80">⏰ Timings: Mon–Sat, 11 AM – 9 PM</p>
-            <p class="mt-2 text-white/80">📞 Contact: (123) 456-7890</p>
+            <table class="table-auto border-collapse  text-white/80 mt-3">
+              <tbody>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">📍 Address</td>
+                  <td class="border border-gray-500 px-4 py-2">597 Elden St, Herndon, VA 20170</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Mon–Thu</td>
+                  <td class="border border-gray-500 px-4 py-2">04 PM – 11 PM</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Fri</td>
+                  <td class="border border-gray-500 px-4 py-2">04 PM – 12 PM</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Sat</td>
+                  <td class="border border-gray-500 px-4 py-2">09 AM – 2 PM | Eve: 04 PM – 12 PM</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Sun</td>
+                  <td class="border border-gray-500 px-4 py-2">09 AM – 2 PM | Eve: 04 PM – 12 PM</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
+                  <td class="border border-gray-500 px-4 py-2">(703) 943-0832</td>
+                </tr>
+              </tbody>
+            </table>
+            
             <p class="mt-4 text-white/70">
               We move across neighborhoods—follow socials for live location and
               daily specials.
@@ -361,15 +392,7 @@
           <div
             class="relative order-1 md:order-2 w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019559736433!2d-122.41941568468142!3d37.774929779759665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c5e5c23fb%3A0xf14c7aebed2fa52e!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1600000000000"
-              width="100%"
-              height="100%"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.5082902419276!2d-77.36950052329186!3d38.965605071709504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b637e31f62169f%3A0x9b82c5db7d7631f!2s97%20Elden%20St%2C%20Herndon%2C%20VA%2020170%2C%20USA!5e1!3m2!1sen!2sin!4v1755925778553!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
 
@@ -510,18 +533,22 @@
             {
               image: "https://images.unsplash.com/photo-1694849789325-914b71ab4075?q=80&w=1200&auto=format&fit=crop",
               title: "Indian Tiffins",
+              fromPrice: "5.75",
             },
             {
-              image: "https://images.unsplash.com/photo-1512058564366-18510be2db19?q=80&w=1200&auto=format&fit=crop",
-              title: "Chinese Street Food",
+              image: "https://plus.unsplash.com/premium_photo-1673108852141-e8c3c22a4a22?w=900&auto=format&fit=crop&q=60&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MXx8Zm9vZHxlbnwwfHwwfHx8MA%3D%3D",
+              title: "Combos & Platters",
+              fromPrice: "6.99",
             },
             {
               image: "https://plus.unsplash.com/premium_photo-1695297516710-854716c51121?q=80&w=1200&auto=format&fit=crop",
               title: "Indian Street Food",
+              fromPrice: "5.99",
             },
             {
               image: "https://plus.unsplash.com/premium_photo-1695927470038-35a215e794f0?q=80&w=1200&auto=format&fit=crop",
               title: "Milkshakes & More",
+              fromPrice: "2.99",
             },
           ],
         };
@@ -540,7 +567,7 @@
               <div class="p-4 flex items-center justify-between">
                 <h4 class="font-semibold text-lg">${item.title}</h4>
                 <span class="inline-flex items-center text-sm text-gold-300">
-                  from <span class="font-semibold ml-2">$5</span>
+                  from <span class="font-semibold ml-2">$${item.fromPrice}</span>
                 </span>
               </div>
             `;
