--- a/header.html
+++ b/header.html
@@ -12,12 +12,12 @@
       </a>
 
       <!-- Desktop links -->
-      <div class="hidden md:flex items-center gap-8">
+<!--       <div class="hidden md:flex items-center gap-8">
         <a href="menu.html" class="text-white/80 hover:text-gold-300 transition">Menu</a>
         <a href="/index.html#about" class="text-white/80 hover:text-gold-300 transition">About</a>
         <a href="/index.html#locations" class="text-white/80 hover:text-gold-300 transition">Locations</a>
         <a href="/index.html#gallery" class="text-white/80 hover:text-gold-300 transition">Gallery</a>
-      </div>
+      </div> -->
 
       <!-- CTA -->
       <a href="/af-food-truck/menu.html" id="menuCta"
