--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     </section>
 
     <!-- ===== TESTIMONIALS ===== -->
-    <section class="py-20 bg-ink-800">
+    <!-- <section class="py-20 bg-ink-800">
       <div class="max-w-7xl mx-auto px-4">
         <h2 class="text-center text-3xl md:text-4xl font-extrabold mb-10">
           What Customers Say
@@ -225,14 +225,14 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- ===== INSTAGRAM FEED PREVIEW ===== -->
     <section class="py-20 bg-ink-900">
       <div class="max-w-7xl mx-auto px-4">
         <div class="flex justify-between mb-6">
           <h2 class="text-3xl font-extrabold">Follow us on Instagram</h2>
-          <a href="https://instagram.com" class="text-gold-300">#AmaravathiFood</a>
+          <a href="https://www.instagram.com/amaravati_foods" class="text-gold-300">#AmaravathiFood</a>
         </div>
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
           <img
@@ -281,47 +281,15 @@
         <div>
           <h3 class="text-3xl md:text-4xl font-extrabold">About Us</h3>
           <p class="mt-4 text-white/80">
-            We serve authentic regional dishes and modern street favorites, made
-            fresh daily with premium ingredients, bold spices, and love.
+            We serve authentic regional dishes and modern street favorites, made fresh daily with premium ingredients, bold spices, and love. Follow our weekly routes and surprise pop-ups across the city—there’s always a new special and a familiar favorite waiting. 
           </p>
-          <p class="mt-4 text-white/70">
-            Follow our weekly routes and surprise pop-ups across the city—there’s
-            always a new special and a familiar favorite waiting.
+          <p class="mt-4 text-white/70 font-bold">
+            And yes, we also offer catering, bringing the same flavors and freshness straight to your events
           </p>
 
           <div class="mt-6 flex items-center gap-4">
             <a
-              href="#"
-              aria-label="Facebook"
-              class="text-white/70 hover:text-gold-300 transition"
-            >
-              <svg
-                class="w-6 h-6"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M22 12c0-5.522-4.477-10-10-10S2 6.478 2 12c0 5.007 3.663 9.127 8.438 9.878v-6.987H7.898v-2.89h2.54V9.845c0-2.506 1.492-3.89 3.777-3.89 1.094 0 2.238.195 2.238.195v2.46h-1.26c-1.242 0-1.63.772-1.63 1.562v1.875h2.773l-.443 2.89h-2.33v6.987C18.337 21.127 22 17.007 22 12z"
-                />
-              </svg>
-            </a>
-            <a
-              href="#"
-              aria-label="Twitter"
-              class="text-white/70 hover:text-gold-300 transition"
-            >
-              <svg
-                class="w-6 h-6"
-                fill="currentColor"
-                viewBox="0 0 24 24"
-              >
-                <path
-                  d="M22.46 6c-.77.34-1.6.57-2.46.68a4.26 4.26 0 0 0 1.88-2.35 8.54 8.54 0 0 1-2.7 1.03 4.27 4.27 0 0 0-7.3 3.89A12.1 12.1 0 0 1 3.1 4.94a4.27 4.27 0 0 0 1.32 5.7A4.22 4.22 0 0 1 2.8 10v.05a4.27 4.27 0 0 0 3.42 4.18 4.3 4.3 0 0 1-1.93.07 4.27 4.27 0 0 0 3.98 2.96A8.57 8.57 0 0 1 2 19.54a12.07 12.07 0 0 0 6.56 1.92c7.88 0 12.2-6.53 12.2-12.2l-.01-.56A8.6 8.6 0 0 0 24 5.5a8.43 8.43 0 0 1-2.54.7z"
-                />
-              </svg>
-            </a>
-            <a
-              href="#"
+              href="https://www.instagram.com/amaravati_foods"
               aria-label="Instagram"
               class="text-white/70 hover:text-gold-300 transition"
             >
@@ -392,11 +360,11 @@
           <div
             class="relative order-1 md:order-2 w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3958.5082902419276!2d-77.36950052329186!3d38.965605071709504!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b637e31f62169f%3A0x9b82c5db7d7631f!2s97%20Elden%20St%2C%20Herndon%2C%20VA%2020170%2C%20USA!5e1!3m2!1sen!2sin!4v1755925778553!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.047624715519!2d-77.38283627329169!3d38.96858052170898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63801bc0b55dd%3A0xd3173d9aeecbbd1d!2s597%20Elden%20St%2C%20Herndon%2C%20VA%2020170%2C%20USA!5e0!3m2!1sen!2sin!4v1756302907905!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+        <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div
             class="relative w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
@@ -424,7 +392,7 @@
               >View Gallery</a
             >
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
