--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Amaravathi Food Truck</title>
+    <title>Amaravati Food Truck</title>
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
 
     <!-- Tailwind CDN with custom theme extension -->
@@ -155,7 +155,7 @@
         <p class="text-white/80">
           Join us for our grand opening! Enjoy a complimentary drink with any
           meal purchase. Experience the vibrant flavors and warm hospitality of
-          Eat Street Food Truck from Amaravathi Foods.
+          Eat Street Food Truck from Amaravati Foods.
         </p>
       </div>
     </section>
@@ -232,7 +232,7 @@
       <div class="max-w-7xl mx-auto px-4">
         <div class="flex justify-between mb-6">
           <h2 class="text-3xl font-extrabold">Follow us on Instagram</h2>
-          <a href="https://www.instagram.com/amaravati_foods" class="text-gold-300">#AmaravathiFood</a>
+          <a href="https://www.instagram.com/amaravati_foods" class="text-gold-300">#AmaravatiFood</a>
         </div>
         <div class="grid grid-cols-2 md:grid-cols-4 gap-4">
           <img
@@ -469,7 +469,7 @@
       <div
         class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 py-10 flex flex-col md:flex-row items-center justify-between gap-4"
       >
-        <p class="text-white/70">© 2025 Amaravathi Food Truck. All rights reserved.</p>
+        <p class="text-white/70">© 2025 Amaravati Food Truck. All rights reserved.</p>
         <div class="flex items-center gap-6">
           <a href="#menu" class="text-white/70 hover:text-gold-300 transition"
             >Menu</a
