--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
         class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 py-10 flex flex-col md:flex-row items-center justify-between gap-4"
       >
         <p class="text-white/70">© 2025 Amaravati Food Truck. All rights reserved.</p>
-        <div class="flex items-center gap-6">
+<!--         <div class="flex items-center gap-6">
           <a href="#menu" class="text-white/70 hover:text-gold-300 transition"
             >Menu</a
           >
@@ -483,7 +483,7 @@
           <a href="#gallery" class="text-white/70 hover:text-gold-300 transition"
             >Gallery</a
           >
-        </div>
+        </div> -->
       </div>
     </footer>
 
