--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         </p>
         <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center">
           <a
-            href="#menu"
+            href="./menu.html"
             class="px-6 py-3 rounded-full bg-gold-500 text-ink-900 font-semibold hover:bg-gold-400 transition shadow-gold"
             >Explore Menu</a
           >
@@ -246,12 +246,12 @@
             alt="Food photo"
           />
           <img
-            src="https://images.pexels.com/photos/1437267/pexels-photo-1437267.jpeg"
+            src="https://i.ytimg.com/vi/XVxGnN_7Htc/hq720.jpg?sqp=-oaymwEhCK4FEIIDSFryq4qpAxMIARUAAAAAGAElAADIQj0AgKJD&rs=AOn4CLBtTnVFTI-L8F_vuE8rWcxWV8vBLw"
             class="rounded-lg object-cover  w-[300px] h-[200px]"
             alt="Food photo"
           />
           <img
-            src="https://images.pexels.com/photos/913136/pexels-photo-913136.jpeg"
+            src="https://content.jdmagicbox.com/v2/comp/eluru/r4/9999p8812.8812.231208203337.s3r4/catalogue/kaju-chicken-pakodi-center-jangareddygudem-road-eluru-fast-food-zz1cedsxx3.jpg"
             class="rounded-lg object-cover  w-[300px] h-[200px]"
             alt="Food photo"
           />
@@ -408,7 +408,7 @@
           <div id="carousel" class="flex gap-6 w-max">
             <div class="min-w-[300px] rotate-[-2deg]">
               <img
-                src="https://images.unsplash.com/photo-1497034825429-c343d7c6a68f?q=80&w=1287&auto=format&fit=crop"
+                src="https://static.toiimg.com/thumb/63799510.cms?imgsize=1091643&width=800&height=800"
                 class="rounded-xl ring-1 ring-white/10 shadow-2xl w-[340px] h-[420px] object-cover"
                 alt="Gallery 1"
               />
