--- a/index.html
+++ b/index.html
@@ -364,35 +364,32 @@
           </div>
         </div>
 
-        <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div
             class="relative w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
-            <iframe
-              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019559736433!2d-122.41941568468142!3d37.774929779759665!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8085809c5e5c23fb%3A0xf14c7aebed2fa52e!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1600000000000"
-              width="100%"
-              height="100%"
-              style="border: 0"
-              allowfullscreen=""
-              loading="lazy"
-              referrerpolicy="no-referrer-when-downgrade"
-            ></iframe>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.9005258110355!2d-77.5150059232933!3d38.92625107171793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b641f04e79e337%3A0x7f828d427fa96559!2s43083%20John%20Mosby%20Hwy%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756702073851!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div>
             <h3 class="text-2xl md:text-3xl font-extrabold">Pop-up Spot</h3>
-            <p class="mt-3 text-white/80">📍 Embarcadero, San Francisco, CA</p>
-            <p class="mt-2 text-white/80">⏰ Fridays: 5 PM – 10 PM</p>
-            <p class="mt-2 text-white/80">📞 Contact: (123) 456-7890</p>
-            <p class="mt-4 text-white/70">
-              Limited menu + seasonal specials—arrive early!
-            </p>
-            <a
-              href="#gallery"
-              class="mt-6 inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-5 py-3 font-semibold hover:border-gold-500/40 hover:text-gold-300 transition"
-              >View Gallery</a
-            >
+            <table class="table-auto border-collapse  text-white/80 mt-3">
+              <tbody>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">📍 Address</td>
+                  <td class="border border-gray-500 px-4 py-2">43083 John Mosby Hwy, Chantilly, VA 20152</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Mon–Thu</td>
+                  <td class="border border-gray-500 px-4 py-2">04 PM – 11 PM</td>
+                </tr>
+                <tr>
+                  <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
+                  <td class="border border-gray-500 px-4 py-2">(703) 943-0832</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
-        </div> -->
+        </div>
       </div>
     </section>
 
