--- a/index.html
+++ b/index.html
@@ -324,19 +324,7 @@
                   <td class="border border-gray-500 px-4 py-2">597 Elden St, Herndon, VA 20170</td>
                 </tr>
                 <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Mon–Thu</td>
-                  <td class="border border-gray-500 px-4 py-2">04 PM – 11 PM</td>
-                </tr>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Fri</td>
-                  <td class="border border-gray-500 px-4 py-2">04 PM – 11 PM</td>
-                </tr>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Sat</td>
-                  <td class="border border-gray-500 px-4 py-2">09 AM – 2 PM | Eve: 04 PM – 12 PM</td>
-                </tr>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Sun</td>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Fri - Sun</td>
                   <td class="border border-gray-500 px-4 py-2">Eve: 04 PM – 11 PM</td>
                 </tr>
                 <tr>
@@ -368,7 +356,7 @@
           <div
             class="relative w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.9005258110355!2d-77.5150059232933!3d38.92625107171793!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b641f04e79e337%3A0x7f828d427fa96559!2s43083%20John%20Mosby%20Hwy%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756702073851!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.8906506614235!2d-77.51512372329321!3d38.92647677171794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64108f21a717b%3A0x36f84e6866e52a29!2s43083%20Little%20River%20Tpke%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756833491862!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div>
             <h3 class="text-2xl md:text-3xl font-extrabold">Find us here at Chantily and Herndon</h3>
