--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
-                  <td class="border border-gray-500 px-4 py-2">(703) 943-0832</td>
+                  <td class="border border-gray-500 px-4 py-2"><a href="tel:(703) 943-0832"> (703) 943-0832</a></td>
                 </tr>
               </tbody>
             </table>
@@ -373,7 +373,7 @@
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
-                  <td class="border border-gray-500 px-4 py-2">(703) 943-0832</td>
+                  <td class="border border-gray-500 px-4 py-2"><a href="tel:(703) 943-0832"> (703) 943-0832</a></td>
                 </tr>
               </tbody>
             </table>
