--- a/index.html
+++ b/index.html
@@ -316,7 +316,7 @@
       <div class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 space-y-16">
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div class="relative order-2 md:order-1">
-            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us Here</h3>
+            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Herndon</h3>
             <table class="table-auto border-collapse  text-white/80 mt-3">
               <tbody>
                 <tr>
@@ -359,7 +359,7 @@
        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.8906506614235!2d-77.51512372329321!3d38.92647677171794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64108f21a717b%3A0x36f84e6866e52a29!2s43083%20Little%20River%20Tpke%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756833491862!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div>
-            <h3 class="text-2xl md:text-3xl font-extrabold">Find us here at Chantily and Herndon</h3>
+            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Chantily</h3>
                  
             <table class="table-auto border-collapse  text-white/80 mt-3">
               <tbody>
@@ -369,7 +369,7 @@
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">⏰ Mon–Thu</td>
-                  <td class="border border-gray-500 px-4 py-2">04 PM – 11 PM</td>
+                  <td class="border border-gray-500 px-4 py-2">05 PM – 11 PM</td>
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
