--- a/menu.html
+++ b/menu.html
@@ -183,7 +183,7 @@
 </section>
 
 <!-- Milk Shakes -->
-<section id="milk-shakes" class="relative py-16 md:py-20 bg-ink-800">
+<!-- <section id="milk-shakes" class="relative py-16 md:py-20 bg-ink-800">
   <div class="absolute inset-0 bg-noise opacity-10 pointer-events-none"></div>
   <div class="max-w-6xl mx-auto px-4 md:px-6 lg:px-8">
     <div class="text-center mb-10">
@@ -192,7 +192,7 @@
     </div>
     <div class="grid grid-cols-1 md:grid-cols-2 gap-x-12 gap-y-8" id="milk-shakes-items"></div>
   </div>
-</section>
+</section> -->
 
 <!-- Desserts -->
 <section id="desserts" class="relative py-16 md:py-20 bg-ink-800">
@@ -311,7 +311,7 @@
         renderMenuItems(data.indo_chinese_street_food, 'indo-chinese-street-food-items');
         renderMenuItems(data.non_veg_appetizers, 'non-veg-appetizers-items');
         renderMenuItems(data.chaat, 'chaat-items');
-        renderMenuItems(data.milk_shakes, 'milk-shakes-items');
+        // renderMenuItems(data.milk_shakes, 'milk-shakes-items');
         renderMenuItems(data.desserts, 'desserts-items');
         renderMenuItems(data.drinks_refreshers, 'drinks-refreshers-items');
       })
