--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
       class="relative py-20 md:py-24 bg-ink-800"
     >
       <div class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 space-y-16">
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+        <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div class="relative order-2 md:order-1">
             <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Herndon</h3>
             <table class="table-auto border-collapse  text-white/80 mt-3">
@@ -350,7 +350,7 @@
           >
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.047624715519!2d-77.38283627329169!3d38.96858052170898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63801bc0b55dd%3A0xd3173d9aeecbbd1d!2s597%20Elden%20St%2C%20Herndon%2C%20VA%2020170%2C%20USA!5e0!3m2!1sen!2sin!4v1756302907905!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-        </div>
+        </div> -->
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div
@@ -368,7 +368,7 @@
                   <td class="border border-gray-500 px-4 py-2">43083 John Mosby Hwy, Chantilly, VA 20152</td>
                 </tr>
                 <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Mon–Thu</td>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Everyday</td>
                   <td class="border border-gray-500 px-4 py-2">05 PM – 11 PM</td>
                 </tr>
                 <tr>
