--- a/menu.html
+++ b/menu.html
@@ -78,7 +78,7 @@
         <a href="#combos" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Combos</a>
         <a href="#indian-street-food" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Indian Street</a>
         <a href="#chaat" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Chaat</a>
-        <a href="#milk-shakes" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Milk Shakes</a>
+        <!-- <a href="#milk-shakes" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Milk Shakes</a> -->
         <a href="#desserts" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Desserts</a>
         <a href="#drinks-refreshers" class="inline-flex items-center gap-2 rounded-full border border-white/10 bg-ink-700/60 px-4 py-2">Drinks</a>
       </div>
