--- a/index.html
+++ b/index.html
@@ -97,13 +97,18 @@
         <div class="mt-8 flex flex-col sm:flex-row gap-4 justify-center">
           <a
             href="./menu.html"
-            class="px-6 py-3 rounded-full bg-gold-500 text-ink-900 font-semibold hover:bg-gold-400 transition shadow-gold"
+            class="px-6 py-3 rounded-full border border-gold-400 text-gold-300 font-semibold hover:bg-gold-400 hover:text-ink-900 transition"
             >Explore Menu</a
           >
           <a
             href="#about"
             class="px-6 py-3 rounded-full border border-gold-400 text-gold-300 font-semibold hover:bg-gold-400 hover:text-ink-900 transition"
             >About Us</a
+          >
+           <a
+            href="#Event"
+            class="px-6 py-3 rounded-full bg-gold-500 text-ink-900 font-semibold hover:bg-gold-400 transition shadow-gold"
+            >Event & Updates</a
           >
         </div>
       </div>
@@ -143,42 +148,54 @@
     </section>
 
     <!-- ===== CHEF'S STORY ===== -->
-    <section
-      class="relative py-20 bg-fixed bg-center bg-cover"
-      style="background-image: url('./assets/kitchen-action.jpg')"
-    >
-      <div class="absolute inset-0 bg-black/60"></div>
-      <div
-        class="relative max-w-4xl mx-auto text-center text-white px-4"
-      >
-        <h2 class="text-3xl md:text-4xl font-extrabold mb-4">GRAND OPENING SPECIAL</h2>
-        <p class="text-white/80">
-          Join us for our grand opening! Enjoy a complimentary drink with any
-          meal purchase. Experience the vibrant flavors and warm hospitality of
-          Eat Street Food Truck from Amaravati Foods.
-        </p>
-      </div>
-    </section>
+<section
+  class="relative py-20 bg-fixed bg-center bg-cover"
+  style="background-color: #EDC967;"
+  id="Event"
+>
+  <div
+    class="relative max-w-4xl mx-auto text-center px-4"
+  >
+    <h2 class="text-3xl md:text-4xl font-extrabold mb-4" style="color: #111;">
+      Upcoming Event <br/>Harvest Festival & Carnival 2025
+    </h2>
+    <p class="mb-2" style="color: #2D3748;">
+      Amaravati Foods is the only Indian food truck at this exciting fall festival! Bring your friends and family to enjoy authentic Indian street flavors, from classic biryanis to sweet treats, right at the heart of the celebration.
+    </p>
+    <p class="mb-2" style="color: #111;">
+      <span class="font-bold" style="color: #111;">Date:</span> October 17–19, 2025 (Friday to Sunday)<br>
+      <span class="font-bold" style="color: #111;">Location:</span> Droumavalla, 14980 Limestone School Road, Leesburg, Virginia 20176
+    </p>
+    <p style="color: #111;">
+      Don't miss out on the festive fun and our delicious halal food specialties!
+    </p>
+  </div>
+</section>
+
+
+
+
+
 
     <!-- ===== SPECIALS ===== -->
-    <section class=" py-12 bg-fixed bg-center bg-cover  "  style="background-image: url('https://images.pexels.com/photos/4331489/pexels-photo-4331489.jpeg');">
+    <!--<section class=" py-12 bg-fixed bg-center bg-cover  "  style="background-image: url('https://images.pexels.com/photos/4331489/pexels-photo-4331489.jpeg');">-->
    
-      <div
-        class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between text-ink-900"
-      >
-        <h3 class="md:text-2xl font-bold mb-4 md:mb-0 ">
-          🌟 IDLY, DOSA, GULAB JAMON COMBO - <span class="md:text-3xl text-gold-300">$ 10.99</span> <br/>
-          🌟 PUNUGULU, BAJJI, TEA COMBO  - <span class="md:text-3xl text-gold-300">$ 12.99</span>
-        </h3>
-        <a
-          href="#menu"
-          class="px-6 py-3 font-semibold bg-ink-900 text-gold-300 rounded-full hover:bg-ink-800"
-          >Order Now</a
-        >
+    <!--  <div-->
+    <!--    class="max-w-7xl mx-auto px-4 flex flex-col md:flex-row items-center justify-between text-ink-900"-->
+    <!--  >-->
+    <!--    <h3 class="md:text-2xl font-bold mb-4 md:mb-0 ">-->
+    <!--      🌟 IDLY, DOSA, GULAB JAMON COMBO - <span class="md:text-3xl text-gold-300">$ 10.99</span> <br/>-->
+    <!--      🌟 PUNUGULU, BAJJI, TEA COMBO  - <span class="md:text-3xl text-gold-300">$ 12.99</span>-->
+    <!--    </h3>-->
+    <!--    <a-->
+    <!--      href="#menu"-->
+    <!--      class="px-6 py-3 font-semibold bg-ink-900 text-gold-300 rounded-full hover:bg-ink-800"-->
+    <!--      >Order Now</a-->
+    <!--    >-->
 
-      </div>
+    <!--  </div>-->
 
-    </section>
+    <!--</section>-->
 
     <!-- Popular Items / Menu -->
     <section id="menu" class="relative py-20 md:py-24 bg-ink-800">
