Update location details for Herndon to Chantilly

--- a/index.html
+++ b/index.html
@@ -331,14 +331,14 @@
       class="relative py-20 md:py-24 bg-ink-800"
     >
       <div class="max-w-7xl mx-auto px-4 md:px-6 lg:px-8 space-y-16">
-        <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
+         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div class="relative order-2 md:order-1">
-            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Herndon</h3>
+            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Chantilly</h3>
             <table class="table-auto border-collapse  text-white/80 mt-3">
               <tbody>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📍 Address</td>
-                  <td class="border border-gray-500 px-4 py-2">597 Elden St, Herndon, VA 20170</td>
+                  <td class="border border-gray-500 px-4 py-2">14000 Lee Jackson Mem Hwy, Chantilly, VA 20151</td>
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">⏰ Fri - Sun</td>
@@ -365,9 +365,9 @@
           <div
             class="relative order-1 md:order-2 w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
           >
-          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3102.047624715519!2d-77.38283627329169!3d38.96858052170898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b63801bc0b55dd%3A0xd3173d9aeecbbd1d!2s597%20Elden%20St%2C%20Herndon%2C%20VA%2020170%2C%20USA!5e0!3m2!1sen!2sin!4v1756302907905!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3105.292496501364!2d-77.43410532292272!3d38.89442607172485!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64684693f570b%3A0xc2f4c01bb9125e54!2s14000%20Lee%20Jackson%20Mem%20Hwy%2C%20Chantilly%2C%20VA%2020151%2C%20USA!5e0!3m2!1sen!2sin!4v1761501390450!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
-        </div> -->
+        </div>
 
         <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
           <div
