--- a/index.html
+++ b/index.html
@@ -105,11 +105,10 @@
             class="px-6 py-3 rounded-full border border-gold-400 text-gold-300 font-semibold hover:bg-gold-400 hover:text-ink-900 transition"
             >About Us</a
           >
-           <a
-            href="#Event"
-            class="px-6 py-3 rounded-full bg-gold-500 text-ink-900 font-semibold hover:bg-gold-400 transition shadow-gold"
-            >Event & Updates</a
-          >
+           <!--<a-->
+           <!-- href="#Event"-->
+           <!-- class="px-6 py-3 rounded-full bg-gold-500 text-ink-900 font-semibold hover:bg-gold-400 transition shadow-gold"-->
+           <!-- >Event & Updates</a >-->
         </div>
       </div>
     </section>
@@ -148,29 +147,29 @@
     </section>
 
     <!-- ===== CHEF'S STORY ===== -->
-<section
-  class="relative py-20 bg-fixed bg-center bg-cover"
-  style="background-color: #EDC967;"
-  id="Event"
->
-  <div
-    class="relative max-w-4xl mx-auto text-center px-4"
-  >
-    <h2 class="text-3xl md:text-4xl font-extrabold mb-4" style="color: #111;">
-      Upcoming Event <br/>Harvest Festival & Carnival 2025
-    </h2>
-    <p class="mb-2" style="color: #2D3748;">
-      Amaravati Foods is the only Indian food truck at this exciting fall festival! Bring your friends and family to enjoy authentic Indian street flavors, from classic biryanis to sweet treats, right at the heart of the celebration.
-    </p>
-    <p class="mb-2" style="color: #111;">
-      <span class="font-bold" style="color: #111;">Date:</span> October 17–19, 2025 (Friday to Sunday)<br>
-      <span class="font-bold" style="color: #111;">Location:</span> Droumavalla, 14980 Limestone School Road, Leesburg, Virginia 20176
-    </p>
-    <p style="color: #111;">
-      Don't miss out on the festive fun and our delicious halal food specialties!
-    </p>
-  </div>
-</section>
+<!--<section-->
+<!--  class="relative py-20 bg-fixed bg-center bg-cover"-->
+<!--  style="background-color: #EDC967;"-->
+<!--  id="Event"-->
+<!-->-->
+<!--  <div-->
+<!--    class="relative max-w-4xl mx-auto text-center px-4"-->
+<!--  >-->
+<!--    <h2 class="text-3xl md:text-4xl font-extrabold mb-4" style="color: #111;">-->
+<!--      Upcoming Event <br/>Harvest Festival & Carnival 2025-->
+<!--    </h2>-->
+<!--    <p class="mb-2" style="color: #2D3748;">-->
+<!--      Amaravati Foods is the only Indian food truck at this exciting fall festival! Bring your friends and family to enjoy authentic Indian street flavors, from classic biryanis to sweet treats, right at the heart of the celebration.-->
+<!--    </p>-->
+<!--    <p class="mb-2" style="color: #111;">-->
+<!--      <span class="font-bold" style="color: #111;">Date:</span> October 17–19, 2025 (Friday to Sunday)<br>-->
+<!--      <span class="font-bold" style="color: #111;">Location:</span> Droumavalla, 14980 Limestone School Road, Leesburg, Virginia 20176-->
+<!--    </p>-->
+<!--    <p style="color: #111;">-->
+<!--      Don't miss out on the festive fun and our delicious halal food specialties!-->
+<!--    </p>-->
+<!--  </div>-->
+<!--</section>-->
 
 
 
@@ -342,7 +341,7 @@
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">⏰ Fri - Sun</td>
-                  <td class="border border-gray-500 px-4 py-2">Eve: 04 PM – 11 PM</td>
+                  <td class="border border-gray-500 px-4 py-2">Eve: 05 PM – 11 PM</td>
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
@@ -369,37 +368,37 @@
           </div>
         </div>
 
-        <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">
-          <div
-            class="relative w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"
-          >
-       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.8906506614235!2d-77.51512372329321!3d38.92647677171794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64108f21a717b%3A0x36f84e6866e52a29!2s43083%20Little%20River%20Tpke%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756833491862!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-          <div>
-            <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Chantily</h3>
+       <!-- <div class="grid grid-cols-1 md:grid-cols-2 gap-8 items-center">-->
+       <!--   <div-->
+       <!--     class="relative w-full h-64 md:h-96 rounded-xl overflow-hidden ring-1 ring-white/10 shadow-2xl"-->
+       <!--   >-->
+       <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3103.8906506614235!2d-77.51512372329321!3d38.92647677171794!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b64108f21a717b%3A0x36f84e6866e52a29!2s43083%20Little%20River%20Tpke%2C%20Chantilly%2C%20VA%2020152%2C%20USA!5e0!3m2!1sen!2sin!4v1756833491862!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
+       <!--   </div>-->
+       <!--   <div>-->
+       <!--     <h3 class="text-2xl md:text-3xl font-extrabold">Find Us At Chantily</h3>-->
                  
-            <table class="table-auto border-collapse  text-white/80 mt-3">
-              <tbody>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">📍 Address</td>
-                  <td class="border border-gray-500 px-4 py-2">43083 John Mosby Hwy, Chantilly, VA 20152</td>
-                </tr>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Everyday</td>
-                  <td class="border border-gray-500 px-4 py-2">05 PM – 11 PM</td>
-                </tr>
-                <tr>
-                  <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
-                  <td class="border border-gray-500 px-4 py-2"><a href="tel:(703) 943-0832"> (703) 943-0832</a></td>
-                </tr>
-              </tbody>
-            </table>
-         <p class="mt-4 text-white/70">
-              We move across neighborhoods—follow socials for live location and
-              daily specials.
-            </p>
-          </div>
-        </div>
+       <!--     <table class="table-auto border-collapse  text-white/80 mt-3">-->
+       <!--       <tbody>-->
+       <!--         <tr>-->
+       <!--           <td class="border border-gray-500 px-4 py-2">📍 Address</td>-->
+       <!--           <td class="border border-gray-500 px-4 py-2">43083 John Mosby Hwy, Chantilly, VA 20152</td>-->
+       <!--         </tr>-->
+       <!--         <tr>-->
+       <!--           <td class="border border-gray-500 px-4 py-2">⏰ Everyday</td>-->
+       <!--           <td class="border border-gray-500 px-4 py-2">05 PM – 11 PM</td>-->
+       <!--         </tr>-->
+       <!--         <tr>-->
+       <!--           <td class="border border-gray-500 px-4 py-2">📞 Contact</td>-->
+       <!--           <td class="border border-gray-500 px-4 py-2"><a href="tel:(703) 943-0832"> (703) 943-0832</a></td>-->
+       <!--         </tr>-->
+       <!--       </tbody>-->
+       <!--     </table>-->
+       <!--  <p class="mt-4 text-white/70">-->
+       <!--       We move across neighborhoods—follow socials for live location and-->
+       <!--       daily specials.-->
+       <!--     </p>-->
+       <!--   </div>-->
+       <!-- </div>-->
       </div>
     </section>
 
