--- a/index.html
+++ b/index.html
@@ -340,8 +340,12 @@
                   <td class="border border-gray-500 px-4 py-2">14000 Lee Jackson Mem Hwy, Chantilly, VA 20151</td>
                 </tr>
                 <tr>
-                  <td class="border border-gray-500 px-4 py-2">⏰ Fri - Sun</td>
-                  <td class="border border-gray-500 px-4 py-2">Eve: 05 PM – 11 PM</td>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Mon - Fri</td>
+                  <td class="border border-gray-500 px-4 py-2">Eve: 04 PM – 10 PM</td>
+                </tr>
+                 <tr>
+                  <td class="border border-gray-500 px-4 py-2">⏰ Sat - Sun</td>
+                  <td class="border border-gray-500 px-4 py-2">10 AM – 10 PM</td>
                 </tr>
                 <tr>
                   <td class="border border-gray-500 px-4 py-2">📞 Contact</td>
